--- a/app/src/main/res/layout/ip_address_view.xml
+++ b/app/src/main/res/layout/ip_address_view.xml
@@ -1,9 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-<!--
-    This XML layout file defines the UI for entering IP address and related details for a wind turbine setup.
-    It includes fields for IP address input, name input, selecting existing wind turbines, and a submit button.
--->
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -104,6 +99,7 @@
         android:layout_height="45dp"
         android:layout_marginTop="8dp"
         android:background="@drawable/edit_text_background"
+        android:textAlignment="center"
         app:layout_constraintStart_toStartOf="@id/editName"
         app:layout_constraintEnd_toEndOf="@id/editName"
         app:layout_constraintTop_toBottomOf="@id/editName" />
