--- a/app/src/main/res/layout/ip_address_view.xml
+++ b/app/src/main/res/layout/ip_address_view.xml
@@ -92,17 +92,31 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/editText" />
 
+    <!-- Description -->
+    <TextView
+        android:id="@+id/description2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="12dp"
+        android:text="@string/selection"
+        android:textColor="@color/dark_grey"
+        android:textSize="16sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.505"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/editName" />
+
+
     <!-- Spinner for selecting existing wind turbines -->
     <Spinner
         android:id="@+id/spinnerWindTurbines"
         android:layout_width="300dp"
         android:layout_height="45dp"
-        android:layout_marginTop="8dp"
         android:background="@drawable/edit_text_background"
         android:textAlignment="center"
         app:layout_constraintStart_toStartOf="@id/editName"
         app:layout_constraintEnd_toEndOf="@id/editName"
-        app:layout_constraintTop_toBottomOf="@id/editName" />
+        app:layout_constraintTop_toBottomOf="@id/description2" />
 
     <!-- Submit Button -->
     <Button
